Wrap contact form in fieldset legend and fix flex position

--- a/src/styles/abstracts/_global.scss
+++ b/src/styles/abstracts/_global.scss
@@ -55,6 +55,12 @@ a {
   border: 0;
 }
 
+fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 .svg {
   @include svg-size;
 }
