--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -11,6 +11,7 @@
   background-color: #ffffff;
   box-shadow: 0 4px 40px rgba(29, 57, 95, 0.08);
   width: 100%;
+  height: 100%;
   min-width: 320px;
   display: flex;
   flex: 1 1;
@@ -22,6 +23,7 @@
     flex-direction: column;
     gap: 4px;
     width: 100%;
+    margin-bottom: 20px;
   }
 
   &__label {
