--- a/src/styles/layouts/_contact-page.scss
+++ b/src/styles/layouts/_contact-page.scss
@@ -11,7 +11,7 @@
 
   @include tablet {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
     gap: 40px;
     margin-bottom: 120px;
